2023-07-27T16:19:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5682999931 # 1062
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 4 34
* notice: prev accum: outdated-unq outdated-all / unq all: 408 715 / 430 751
* notice: next accum: outdated-unq outdated-all / unq all: 408 715 / 430 752
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -2 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-13 2023-07-27]

2023-07-27T01:14:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5675384648 # 1060
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 408 715 / 429 750
* notice: next accum: outdated-unq outdated-all / unq all: 408 715 / 430 751
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-13 2023-07-27]

2023-07-26T16:19:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5671234288 # 1059
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-26
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 408 715 / 429 749
* notice: next accum: outdated-unq outdated-all / unq all: 408 715 / 429 750
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-26]

2023-07-26T08:19:35Z: