@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-27T16:19:57Z",
-  "count_outdated" : 715,
-  "uniques_outdated" : 408,
-  "count" : 752,
-  "uniques" : 430,
+  "timestamp" : "2023-07-28T01:16:19Z",
+  "count_outdated" : 720,
+  "uniques_outdated" : 411,
+  "count" : 753,
+  "uniques" : 431,
   "clones" : [
-    {
-      "timestamp": "2023-07-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 5 ],
-      "count_decinc": [ 3, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
     {
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 2,
@@ -136,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
