@@ -1,12 +1,7 @@
 {
-  "count": 34,
-  "uniques": 4,
+  "count": 33,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-07-13T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 2,
@@ -75,6 +70,11 @@
     {
       "timestamp": "2023-07-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
